--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "@portabletext/react": "^5.0.0",
     "@sanity/client": "^7.13.1",
     "@sanity/image-url": "^2.0.1",
+    "@sanity/types": "^4.20.0",
     "@sanity/vision": "^3",
+    "@types/styled-components": "^5.1.36",
     "groq": "^3.99.0",
     "next": "^15.5.6",
     "next-sanity": "^9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sanity": "^3"
+    "react-is": "^19.2.1",
+    "sanity": "^3",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
